[gd_scene load_steps=2 format=3 uid="uid://ja1mxtwmpwk3"]

[ext_resource type="Script" path="res://scripts/player_gui.gd" id="1_24405"]

[node name="player_gui" type="CanvasLayer"]
script = ExtResource("1_24405")

[node name="BackgroundRect" type="ColorRect" parent="."]
offset_top = 550.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.462745, 0.352941, 1, 0.184314)

[node name="ProgressLabel" type="Label" parent="."]
offset_left = 77.0
offset_top = 570.0
offset_right = 473.0
offset_bottom = 598.0
text = "Energy"

[node name="ProgressBar" type="ProgressBar" parent="ProgressLabel"]
layout_mode = 0
offset_left = -5.0
offset_top = 37.0
offset_right = 296.0
offset_bottom = 64.0
rounded = true

[node name="EnergyLabel" type="Label" parent="."]
offset_left = 615.0
offset_top = 565.0
offset_right = 1011.0
offset_bottom = 593.0
text = "Energy"

[node name="EnergyBar" type="ProgressBar" parent="EnergyLabel"]
layout_mode = 0
offset_left = -5.0
offset_top = 37.0
offset_right = 296.0
offset_bottom = 64.0
rounded = true
fill_mode = 1
